--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @user do |f|
+= form_for @user, html: {class: 'ui form'} do |f|
   - if @user.errors.any?
     #error_explanation
       h2 = "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
@@ -13,6 +13,9 @@
     = f.label :email
     = f.text_field :email
   .field
-    = f.label :password_digest
-    = f.text_field :password_digest
+    = f.label :password
+    = f.password_field :password
+  .field
+    = f.label :password_confirmation, "Confirmation"
+    = f.password_field :password_confirmation
   .actions = f.submit
