--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,11 +9,18 @@ html
   body
     nav.ui.fixed.menu.inverted.navbar
       a.brand.item href="/" Home
+      - if logged_in?
+        a.brand.item href="/logout" Logout
+      - else
+        a.brand.item href="/login" Login
 
     main.ui.page.grid
       div.row
         div.column.ui.segment
           == render 'breadcrumbs'
+
+          - flash.each do |message_type, message|
+            div class="ui #{message_type} message" #{message}
           == yield
 
     == debug(params) if Rails.env.development?
