--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -18,4 +18,4 @@
   .field
     = f.label :password_confirmation, "Confirmation"
     = f.password_field :password_confirmation
-  .actions = f.submit
+  .actions = f.submit class: "ui button"
