--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -15,6 +15,9 @@ p
 p
   strong Answere wrong 3:
   = @question.answere_wrong_3
+p
+  strong Rating:
+  = @question.rating
 
 = link_to 'Edit', edit_question_path(@question)
 '|
