--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -21,4 +21,7 @@
   .field
     = f.label :answere_wrong_3
     = f.text_field :answere_wrong_3
+    .field
+      = f.label :rating
+      = f.text_field :rating
   .actions = f.submit
