--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -16,11 +16,11 @@
     = f.label :answer_wrong_1
     = f.text_field :answer_wrong_1
   .field
-    = f.label :answere_wrong_2
-    = f.text_field :answere_wrong_2
+    = f.label :answer_wrong_2
+    = f.text_field :answer_wrong_2
   .field
-    = f.label :answere_wrong_3
-    = f.text_field :answere_wrong_3
+    = f.label :answer_wrong_3
+    = f.text_field :answer_wrong_3
     .field
       = f.label :rating
       = f.text_field :rating
