--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -6,8 +6,8 @@ table.ui.table
       th Question
       th Answer correct
       th Answer wrong 1
-      th Answere wrong 2
-      th Answere wrong 3
+      th Answer wrong 2
+      th Answer wrong 3
       th Rating
       th
       th
@@ -19,8 +19,8 @@ table.ui.table
         td = question.question
         td = question.answer_correct
         td = question.answer_wrong_1
-        td = question.answere_wrong_2
-        td = question.answere_wrong_3
+        td = question.answer_wrong_2
+        td = question.answer_wrong_3
         td = question.rating
         td = link_to 'Show', question
         td = link_to 'Edit', edit_question_path(question)
