--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,11 +10,11 @@ p
   strong Answer wrong 1:
   = @question.answer_wrong_1
 p
-  strong Answere wrong 2:
-  = @question.answere_wrong_2
+  strong Answer wrong 2:
+  = @question.answer_wrong_2
 p
-  strong Answere wrong 3:
-  = @question.answere_wrong_3
+  strong Answer wrong 3:
+  = @question.answer_wrong_3
 p
   strong Rating:
   = @question.rating
