--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,9 +10,16 @@ html
     nav.ui.fixed.menu.inverted.navbar
       a.brand.item href="/" Home
       - if logged_in?
+        -if current_user.creator
+          a.brand.item href="/categories" Category
+          a.brand.item href="/questions" Question
+        
+        a.brand.item href="/game" Game
+        a.brand.item href="/scores" Score
         a.brand.item href="/logout" Logout
       - else
         a.brand.item href="/login" Login
+
 
     main.ui.page.grid
       div.row
