Fix some little problems

--- a/app/views/game/answer.html.slim
+++ b/app/views/game/answer.html.slim
@@ -23,5 +23,5 @@ br
   = link_to "/game/question"
     div.ui.button Next Question
 - if !@correct_answerd
-  = link_to "/game/score"
+  = link_to "/scores"
     div.ui.button Show Score
