--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,10 +15,10 @@ html
           a.brand.item href="/questions" Questions
         -if current_user.admin
           a.brand.item href="/users" Users
-          
+
         a.brand.item href="/game" Game
         a.brand.item href="/scores" Score
-        a.brand.item href="/logout" Logout
+        a.brand.item href="/logout" data-method="delete" Logout
       - else
         a.brand.item href="/scores" Score
         a.brand.item href="/login" Login
