--- a/app/views/game/category.html.slim
+++ b/app/views/game/category.html.slim
@@ -4,6 +4,5 @@ p Select one Category
 
 div.ui.vertical.buttons
   - @categories.each do |category|
-    - url = "/game/category/" + category.id.to_s
-    = link_to url
+    = link_to game_category_select_path(id: category.id), :method=> :post
       div.ui.button = category.name
